tests/baselines/reference/commaOperatorWithoutOperand(strict=true).errors.txt
commaOperatorWithoutOperand.ts(9,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(9,7): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(10,2): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorWithoutOperand.ts(10,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(10,11): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(11,2): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorWithoutOperand.ts(11,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(11,10): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(12,2): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithoutOperand.ts(12,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(12,10): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(13,2): error TS2454: Variable 'OBJECT' is used before being assigned.
commaOperatorWithoutOperand.ts(13,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(13,10): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(16,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(16,2): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(17,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(17,2): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(17,4): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorWithoutOperand.ts(18,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(18,2): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(18,4): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorWithoutOperand.ts(19,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(19,2): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(19,4): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorWithoutOperand.ts(20,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(20,2): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(20,4): error TS2454: Variable 'OBJECT' is used before being assigned.
commaOperatorWithoutOperand.ts(23,2): error TS2695: Left side of comma operator is unused and has no side effects.
commaOperatorWithoutOperand.ts(23,3): error TS1109: Expression expected.
commaOperatorWithoutOperand.ts(23,5): error TS1109: Expression expected.


==== commaOperatorWithoutOperand.ts (31 errors) ====
    var ANY: any;
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    var OBJECT: Object;
    
    // Expect to have compiler errors
    // Missing the second operand
    (ANY, );
     ~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
          ~
!!! error TS1109: Expression expected.
    (BOOLEAN, );
     ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
     ~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
              ~
!!! error TS1109: Expression expected.
    (NUMBER, );
     ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
     ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    (STRING, );
     ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
     ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    (OBJECT, );
     ~~~~~~
!!! error TS2454: Variable 'OBJECT' is used before being assigned.
     ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    
    // Missing the first operand
    (, ANY);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
    (, BOOLEAN);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
       ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    (, NUMBER);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
       ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    (, STRING);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
       ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    (, OBJECT);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
       ~~~~~~
!!! error TS2454: Variable 'OBJECT' is used before being assigned.
    
    // Missing all operands
    ( , );
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
      ~
!!! error TS1109: Expression expected.
        ~
!!! error TS1109: Expression expected.